--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,152 @@
 body {
-  font-family: 'Telex', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
 }
 
-.footer {
-  margin-top: 10px;
-  font-size: 12px;
-  text-align: center;
+.nav {
+  width: 100%;
+  height: 80px;
+  background: #ececec;
+}
+
+.logo {
+  width: 12%;
+  height: 100%;
+  background: #fff;
+  display: inline-block;
+  position: relative;
+}
+
+.logo-block {
+  height: 50%;
+  width: 90%;
+  background: #ececec;
   vertical-align: middle;
-  color: #6e6e6e;
+  position: absolute;
+  top: 25%;
+  left: 5%;
 }
 
-#footer-left-margin {
-  margin-left: 34px;
-}
-
-.footer a, .footer p {
+.tabs {
+  width: 6%;
+  height: 100%;
+  background: #7b7b7b;
   display: inline-block;
 }
 
-.footer a {
-  text-decoration: none;
-  color: #08c;
+.tabs * {
+  padding-right: 5px;
 }
 
-.footer img {
-  vertical-align: bottom;
-  margin-bottom: -4px;
+.body {
+  width: 68%;
+  height: 2500px;
+  background: #fff;
+  display: inline-block;
+  padding-top: 50px;
 }
 
-.footer a:nth-of-type(n+1) {
-  border-right: 1px solid #ccc;
-  padding-right: 4px;
-  padding-left: 4px;
+.left-nav {
+  width: 20%;
+  height: 100%;
+  display: inline-block;
 }
 
-.footer a:nth-of-type(2n+8) {
-  border: none !important;
-  padding-left: 4px !important;
-  padding-right: 0 !important;
+.nav-item {
+  width: 50%;
+  height: 150px;
+  background: #fff;
+  padding-left: 20%;
 }
 
-.footer p a {
-  border: none !important;
-  padding: 0 !important;
+.nav-item * {
+  margin-bottom: 5px;
 }
 
-.footer a:hover {
-  text-decoration: underline;
-  color: #08c;
+.black-item {
+  width: 100%;
+  height: 15%;
+  background: #000;
 }
 
-.footer p:nth-of-type(2) {
-  margin-left: -685px;
+.grey-item {
+  width: 100%;
+  height: 15%;
+  background: #7b7b7b;
+}
+
+.article {
+  width: 79%;
+  height: 100%;
+  display: inline-block;
+}
+
+.article-content {
+  width: 100%;
+  height: 300px;
+  background: #fff;
+  display: block;
+  margin-bottom: 80px;
+}
+
+.article-content * {
+  margin-bottom: 5px;
+}
+
+.heading {
+  height: 20%;
+  width: 90%;
+  background: #000;
+}
+
+.text {
+  height: 15%;
+  width: 90%;
+  background: #7b7b7b;
+}
+
+.right-sidebar {
+  width: 31.6%;
+  height: 2500px;
+  background: #ececec;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.searchbar {
+  width: 90%;
+  padding-left: 5%;
+  height: 50px;
+}
+
+.sw {
+  width: 75%;
+  height: 100%;
+  background: #fff;
+  display: inline-block;
+}
+
+.sb {
+  width: 20%;
+  height: 100%;
+  background: #000;
+  display: inline-block;
+}
+
+.sidebar-content {
+  width: 90%;
+  height: 250px;
+  margin-top: 20px;
+  background: #f6f6f6;
+  position: relative;
+}
+
+.centered-grey-block {
+  width: 75%;
+  height: 75%;
+  position: absolute;
+  top: 12.5%;
+  left: 12.5%;
+  background: #7b7b7b;
 }
